compiler/testData/diagnostics/tests/javac/Lambda.diag.txt
// -- Module: <m1> --

// -- Module: <m2> --

// -- Module: <m3> --

// -- Module: <m4> --
/Call.kt:90:19: error: unresolved reference: result
fun simple(b: com.result.B<*>) {}
                  ^^^^^^

